--- a/apps/web/app/globals.css
+++ b/apps/web/app/globals.css
@@ -1,6 +1,6 @@
 @import '@repo/design-system/globals.css';
 
 @theme inline {
-  --font-mono: var(--font-firacode);
-  --font-sans: var(--font-firasans);
+  --font-mono: var(--font-geist-mono);
+  --font-sans: var(--font-geist);
 }
